# maritime-agents

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
agents/: ais_agent.py  news_agent.py  port_agent.py  report_agent.py  supervisor_agent.py  weather_agent.py
alembic/: env.py
app/: config.py  database.py  main.py  scheduler.py
app/agents/: report_agent.py
app/models/: __init__.py  report.py  scheduled_task.py  task_run.py  user.py
app/routers/: reports.py  tasks.py
app/schemas/: report.py  task.py
app/services/: email_service.py  schedule_parser.py  scheduler.py  task_service.py
app/templates/: report_email.html
app/tools/: ais_data.py  news_api.py  port_data.py  weather_api.py
app/workers/: task_worker.py
maritime_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: maritime_models.py  report_models.py
tests/: conftest.py  test_daily_report_workflow.py  test_tasks.py
tools/: ais_db.py  email_tool.py  news_api.py  port_db.py  weather_api.py
workflows/: daily_report_workflow.py
